// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Host on Stage > one host: layout is stable for presentation 1`] = `
{
  "canvasImages": [
    {
      "border": true,
      "borderColor": "#FFFFFF",
      "borderWidth": 0.001,
      "cornerRadius": 5,
      "fit": "cover",
      "height": 0.634,
      "id": "img-s2",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "simpleRole": "stageHost-0.photo",
      "src": "a.jpg",
      "width": 0.282,
      "x": 0.201,
      "y": 0.5,
    },
  ],
  "customSize": {
    "height": 1080,
    "width": 1920,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "bottom-right",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0.22,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.068,
        "id": "shape-s0",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "label.chip",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.1725,
        "x": 0.4862,
        "y": 0.268,
      },
    ],
    "showLogo": true,
    "texts": [
      {
        "align": "left",
        "color": "#15110E",
        "content": "BBQ STAGE",
        "font": "onest",
        "fontSize": 43,
        "id": "text-s1",
        "letterSpacing": 1,
        "position": {
          "x": 0.4169,
          "y": 0.2724,
        },
        "simpleRole": "label",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Pierre Leroy",
        "font": "onest",
        "fontSize": 113,
        "id": "text-s3",
        "position": {
          "x": 0.4,
          "y": 0.4295,
        },
        "simpleRole": "stageHost-0.name",
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Managing Director",
        "font": "onest",
        "fontSize": 53,
        "id": "text-s4",
        "position": {
          "x": 0.4,
          "y": 0.5245,
        },
        "simpleRole": "stageHost-0.title",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Stifel",
        "font": "onest",
        "fontSize": 53,
        "id": "text-s5",
        "position": {
          "x": 0.4,
          "y": 0.5775,
        },
        "simpleRole": "stageHost-0.company",
        "weight": 500,
      },
    ],
  },
  "format": "presentation",
}
`;

exports[`Host on Stage > one host: layout is stable for square 1`] = `
{
  "canvasImages": [
    {
      "border": true,
      "borderColor": "#FFFFFF",
      "borderWidth": 0.0013,
      "cornerRadius": 5,
      "fit": "cover",
      "height": 0.43,
      "id": "img-s2",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "simpleRole": "stageHost-0.photo",
      "src": "a.jpg",
      "width": 0.34,
      "x": 0.23,
      "y": 0.315,
    },
  ],
  "customSize": {
    "height": 1500,
    "width": 1500,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "bottom-right",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0.22,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.068,
        "id": "shape-s0",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "label.chip",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.3045,
        "x": 0.2123,
        "y": 0.619,
      },
    ],
    "showLogo": true,
    "texts": [
      {
        "align": "left",
        "color": "#15110E",
        "content": "BBQ STAGE",
        "font": "onest",
        "fontSize": 60,
        "id": "text-s1",
        "letterSpacing": 1,
        "position": {
          "x": 0.09,
          "y": 0.6234,
        },
        "simpleRole": "label",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Pierre Leroy",
        "font": "onest",
        "fontSize": 158,
        "id": "text-s3",
        "position": {
          "x": 0.06,
          "y": 0.7505,
        },
        "simpleRole": "stageHost-0.name",
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Managing Director",
        "font": "onest",
        "fontSize": 74,
        "id": "text-s4",
        "position": {
          "x": 0.06,
          "y": 0.8455,
        },
        "simpleRole": "stageHost-0.title",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Stifel",
        "font": "onest",
        "fontSize": 74,
        "id": "text-s5",
        "position": {
          "x": 0.06,
          "y": 0.8985,
        },
        "simpleRole": "stageHost-0.company",
        "weight": 500,
      },
    ],
  },
  "format": "square",
}
`;

exports[`Host on Stage > one host: layout is stable for story 1`] = `
{
  "canvasImages": [
    {
      "border": true,
      "borderColor": "#FFFFFF",
      "borderWidth": 0.0019,
      "cornerRadius": 5,
      "fit": "cover",
      "height": 0.44,
      "id": "img-s2",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "simpleRole": "stageHost-0.photo",
      "src": "a.jpg",
      "width": 0.62,
      "x": 0.37,
      "y": 0.38,
    },
  ],
  "customSize": {
    "height": 1920,
    "width": 1080,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "bottom-right",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0.22,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.0383,
        "id": "shape-s0",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "label.chip",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.3066,
        "x": 0.2133,
        "y": 0.6741,
      },
    ],
    "showLogo": true,
    "texts": [
      {
        "align": "left",
        "color": "#15110E",
        "content": "BBQ STAGE",
        "font": "onest",
        "fontSize": 43,
        "id": "text-s1",
        "letterSpacing": 1,
        "position": {
          "x": 0.09,
          "y": 0.6766,
        },
        "simpleRole": "label",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Pierre Leroy",
        "font": "onest",
        "fontSize": 113,
        "id": "text-s3",
        "position": {
          "x": 0.06,
          "y": 0.7678,
        },
        "simpleRole": "stageHost-0.name",
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Managing Director",
        "font": "onest",
        "fontSize": 53,
        "id": "text-s4",
        "position": {
          "x": 0.06,
          "y": 0.8291,
        },
        "simpleRole": "stageHost-0.title",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Stifel",
        "font": "onest",
        "fontSize": 53,
        "id": "text-s5",
        "position": {
          "x": 0.06,
          "y": 0.8607,
        },
        "simpleRole": "stageHost-0.company",
        "weight": 500,
      },
    ],
  },
  "format": "story",
}
`;

exports[`Host on Stage > two hosts: layout is stable for presentation 1`] = `
{
  "canvasImages": [
    {
      "border": true,
      "borderColor": "#FFFFFF",
      "borderWidth": 0.001,
      "cornerRadius": 5,
      "fit": "cover",
      "height": 0.535,
      "id": "img-s2",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "simpleRole": "stageHost-0.photo",
      "src": "a.jpg",
      "width": 0.237,
      "x": 0.2855,
      "y": 0.4485,
    },
    {
      "border": true,
      "borderColor": "#FFFFFF",
      "borderWidth": 0.001,
      "cornerRadius": 5,
      "fit": "cover",
      "height": 0.535,
      "id": "img-s6",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "simpleRole": "stageHost-1.photo",
      "src": "b.jpg",
      "width": 0.237,
      "x": 0.7145,
      "y": 0.4485,
    },
  ],
  "customSize": {
    "height": 1080,
    "width": 1920,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "bottom-right",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0.22,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.068,
        "id": "shape-s0",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "label.chip",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.1725,
        "x": 0.1462,
        "y": 0.094,
      },
    ],
    "showLogo": true,
    "texts": [
      {
        "align": "left",
        "color": "#15110E",
        "content": "BBQ STAGE",
        "font": "onest",
        "fontSize": 43,
        "id": "text-s1",
        "letterSpacing": 1,
        "position": {
          "x": 0.0769,
          "y": 0.0984,
        },
        "simpleRole": "label",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Pierre Leroy",
        "font": "onest",
        "fontSize": 65,
        "id": "text-s3",
        "position": {
          "x": 0.167,
          "y": 0.788,
        },
        "simpleRole": "stageHost-0.name",
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Managing Director",
        "font": "onest",
        "fontSize": 35,
        "id": "text-s4",
        "position": {
          "x": 0.167,
          "y": 0.846,
        },
        "simpleRole": "stageHost-0.title",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Stifel",
        "font": "onest",
        "fontSize": 35,
        "id": "text-s5",
        "position": {
          "x": 0.167,
          "y": 0.882,
        },
        "simpleRole": "stageHost-0.company",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Omolade Adebisi",
        "font": "onest",
        "fontSize": 63,
        "id": "text-s7",
        "position": {
          "x": 0.596,
          "y": 0.7871,
        },
        "simpleRole": "stageHost-1.name",
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Head of Secondaries",
        "font": "onest",
        "fontSize": 35,
        "id": "text-s8",
        "position": {
          "x": 0.596,
          "y": 0.8441,
        },
        "simpleRole": "stageHost-1.title",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "ISOMER Capital",
        "font": "onest",
        "fontSize": 35,
        "id": "text-s9",
        "position": {
          "x": 0.596,
          "y": 0.8801,
        },
        "simpleRole": "stageHost-1.company",
        "weight": 500,
      },
    ],
  },
  "format": "presentation",
}
`;

exports[`Host on Stage > two hosts: layout is stable for square 1`] = `
{
  "canvasImages": [
    {
      "border": true,
      "borderColor": "#FFFFFF",
      "borderWidth": 0.0013,
      "cornerRadius": 5,
      "fit": "cover",
      "height": 0.481,
      "id": "img-s2",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "simpleRole": "stageHost-0.photo",
      "src": "a.jpg",
      "width": 0.38,
      "x": 0.27,
      "y": 0.4805,
    },
    {
      "border": true,
      "borderColor": "#FFFFFF",
      "borderWidth": 0.0013,
      "cornerRadius": 5,
      "fit": "cover",
      "height": 0.481,
      "id": "img-s6",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "simpleRole": "stageHost-1.photo",
      "src": "b.jpg",
      "width": 0.38,
      "x": 0.73,
      "y": 0.4805,
    },
  ],
  "customSize": {
    "height": 1500,
    "width": 1500,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "bottom-right",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0.22,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.068,
        "id": "shape-s0",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "label.chip",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.3045,
        "x": 0.2123,
        "y": 0.094,
      },
    ],
    "showLogo": true,
    "texts": [
      {
        "align": "left",
        "color": "#15110E",
        "content": "BBQ STAGE",
        "font": "onest",
        "fontSize": 60,
        "id": "text-s1",
        "letterSpacing": 1,
        "position": {
          "x": 0.09,
          "y": 0.0984,
        },
        "simpleRole": "label",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Pierre Leroy",
        "font": "onest",
        "fontSize": 90,
        "id": "text-s3",
        "position": {
          "x": 0.08,
          "y": 0.779,
        },
        "simpleRole": "stageHost-0.name",
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Managing Director",
        "font": "onest",
        "fontSize": 48,
        "id": "text-s4",
        "position": {
          "x": 0.08,
          "y": 0.837,
        },
        "simpleRole": "stageHost-0.title",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Stifel",
        "font": "onest",
        "fontSize": 48,
        "id": "text-s5",
        "position": {
          "x": 0.08,
          "y": 0.873,
        },
        "simpleRole": "stageHost-0.company",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Omolade Adebisi",
        "font": "onest",
        "fontSize": 79,
        "id": "text-s7",
        "position": {
          "x": 0.54,
          "y": 0.7752,
        },
        "simpleRole": "stageHost-1.name",
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Head of Secondaries",
        "font": "onest",
        "fontSize": 48,
        "id": "text-s8",
        "position": {
          "x": 0.54,
          "y": 0.8294,
        },
        "simpleRole": "stageHost-1.title",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "ISOMER Capital",
        "font": "onest",
        "fontSize": 48,
        "id": "text-s9",
        "position": {
          "x": 0.54,
          "y": 0.8654,
        },
        "simpleRole": "stageHost-1.company",
        "weight": 500,
      },
    ],
  },
  "format": "square",
}
`;

exports[`Host on Stage > two hosts: layout is stable for story 1`] = `
{
  "canvasImages": [
    {
      "border": true,
      "borderColor": "#FFFFFF",
      "borderWidth": 0.0019,
      "cornerRadius": 5,
      "fit": "cover",
      "height": 0.2706,
      "id": "img-s2",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "simpleRole": "stageHost-0.photo",
      "src": "a.jpg",
      "width": 0.38,
      "x": 0.27,
      "y": 0.4353,
    },
    {
      "border": true,
      "borderColor": "#FFFFFF",
      "borderWidth": 0.0019,
      "cornerRadius": 5,
      "fit": "cover",
      "height": 0.2706,
      "id": "img-s6",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "simpleRole": "stageHost-1.photo",
      "src": "b.jpg",
      "width": 0.38,
      "x": 0.73,
      "y": 0.4353,
    },
  ],
  "customSize": {
    "height": 1920,
    "width": 1080,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "bottom-right",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0.22,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.0383,
        "id": "shape-s0",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "label.chip",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.3066,
        "x": 0.2133,
        "y": 0.0791,
      },
    ],
    "showLogo": true,
    "texts": [
      {
        "align": "left",
        "color": "#15110E",
        "content": "BBQ STAGE",
        "font": "onest",
        "fontSize": 43,
        "id": "text-s1",
        "letterSpacing": 1,
        "position": {
          "x": 0.09,
          "y": 0.0816,
        },
        "simpleRole": "label",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Pierre Leroy",
        "font": "onest",
        "fontSize": 65,
        "id": "text-s3",
        "position": {
          "x": 0.08,
          "y": 0.6154,
        },
        "simpleRole": "stageHost-0.name",
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Managing Director",
        "font": "onest",
        "fontSize": 35,
        "id": "text-s4",
        "position": {
          "x": 0.08,
          "y": 0.6533,
        },
        "simpleRole": "stageHost-0.title",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Stifel",
        "font": "onest",
        "fontSize": 35,
        "id": "text-s5",
        "position": {
          "x": 0.08,
          "y": 0.6753,
        },
        "simpleRole": "stageHost-0.company",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Omolade Adebisi",
        "font": "onest",
        "fontSize": 57,
        "id": "text-s7",
        "position": {
          "x": 0.54,
          "y": 0.6133,
        },
        "simpleRole": "stageHost-1.name",
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Head of Secondaries",
        "font": "onest",
        "fontSize": 35,
        "id": "text-s8",
        "position": {
          "x": 0.54,
          "y": 0.6491,
        },
        "simpleRole": "stageHost-1.title",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "ISOMER Capital",
        "font": "onest",
        "fontSize": 35,
        "id": "text-s9",
        "position": {
          "x": 0.54,
          "y": 0.6711,
        },
        "simpleRole": "stageHost-1.company",
        "weight": 500,
      },
    ],
  },
  "format": "story",
}
`;

exports[`Panel Maker — 3 speakers + 1 moderator > layout is stable for presentation 1`] = `
{
  "canvasImages": [
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.3408,
      "id": "img-s6",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "moderator.photo",
      "src": "/samples/pierre-leroy.jpg",
      "width": 0.1629,
      "x": 0.1415,
      "y": 0.7496,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.3408,
      "id": "img-sa",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-0.photo",
      "src": "/samples/andrei-xydas.jpg",
      "width": 0.1629,
      "x": 0.3224,
      "y": 0.7496,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.3408,
      "id": "img-se",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-1.photo",
      "src": "/samples/nicholas-sando.jpg",
      "width": 0.1629,
      "x": 0.5614,
      "y": 0.7496,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.3408,
      "id": "img-si",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-2.photo",
      "src": "/samples/omolade-adebisi.jpg",
      "width": 0.1629,
      "x": 0.8005,
      "y": 0.7496,
    },
  ],
  "customSize": {
    "height": 1080,
    "width": 1920,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "bottom-left",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0.22,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.0612,
        "id": "shape-s2",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "label.chip",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.2514,
        "x": 0.1857,
        "y": 0.3996,
      },
    ],
    "showLogo": true,
    "texts": [
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Continuation Capital
& Venture Secondaries:",
        "font": "onest",
        "fontSize": 89,
        "id": "text-s0",
        "position": {
          "x": 0.06,
          "y": 0.197,
        },
        "simpleRole": "headline",
        "weight": 600,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.95)",
        "content": "Financing the Next Phase of European Growth",
        "font": "onest",
        "fontSize": 39,
        "id": "text-s1",
        "position": {
          "x": 0.06,
          "y": 0.327,
        },
        "simpleRole": "subtitle",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#15110E",
        "content": "PANEL DISCUSSION",
        "font": "onest",
        "fontSize": 39,
        "id": "text-s3",
        "letterSpacing": 1,
        "position": {
          "x": 0.0769,
          "y": 0.4036,
        },
        "simpleRole": "label",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Pierre Leroy",
        "font": "onest",
        "fontSize": 22,
        "id": "text-s4",
        "position": {
          "x": 0.06,
          "y": 0.5224,
        },
        "simpleRole": "moderator.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Managing Director & Co-Head of
Secondaries at Stifel",
        "font": "onest",
        "fontSize": 16,
        "id": "text-s5",
        "position": {
          "x": 0.06,
          "y": 0.5528,
        },
        "simpleRole": "moderator.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "MODERATOR",
        "font": "onest",
        "fontSize": 19,
        "id": "text-s7",
        "letterSpacing": 1,
        "position": {
          "x": 0.08,
          "y": 0.8975,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Andrei Xydas",
        "font": "onest",
        "fontSize": 19,
        "id": "text-s8",
        "position": {
          "x": 0.2409,
          "y": 0.5392,
        },
        "simpleRole": "speaker-0.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Principal, Lightrock",
        "font": "onest",
        "fontSize": 14,
        "id": "text-s9",
        "position": {
          "x": 0.2409,
          "y": 0.5607,
        },
        "simpleRole": "speaker-0.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 16,
        "id": "text-sb",
        "letterSpacing": 1,
        "position": {
          "x": 0.2609,
          "y": 0.9013,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Nicholas Sando",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sc",
        "position": {
          "x": 0.48,
          "y": 0.5392,
        },
        "simpleRole": "speaker-1.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Partner, Secondaries, Molten",
        "font": "onest",
        "fontSize": 14,
        "id": "text-sd",
        "position": {
          "x": 0.48,
          "y": 0.5607,
        },
        "simpleRole": "speaker-1.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 16,
        "id": "text-sf",
        "letterSpacing": 1,
        "position": {
          "x": 0.5,
          "y": 0.9013,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Omolade Adebisi",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sg",
        "position": {
          "x": 0.719,
          "y": 0.5263,
        },
        "simpleRole": "speaker-2.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Principal & Head of Secondaries, ISOMER
Capital",
        "font": "onest",
        "fontSize": 14,
        "id": "text-sh",
        "position": {
          "x": 0.719,
          "y": 0.5542,
        },
        "simpleRole": "speaker-2.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 16,
        "id": "text-sj",
        "letterSpacing": 1,
        "position": {
          "x": 0.739,
          "y": 0.9013,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
    ],
  },
  "format": "presentation",
}
`;

exports[`Panel Maker — 3 speakers + 1 moderator > layout is stable for square 1`] = `
{
  "canvasImages": [
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.3659,
      "id": "img-s4",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "moderator.photo",
      "src": "/samples/pierre-leroy.jpg",
      "width": 0.3,
      "x": 0.21,
      "y": 0.6536,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2056,
      "id": "img-sa",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-0.photo",
      "src": "/samples/andrei-xydas.jpg",
      "width": 0.185,
      "x": 0.4825,
      "y": 0.8272,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2056,
      "id": "img-se",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-1.photo",
      "src": "/samples/nicholas-sando.jpg",
      "width": 0.185,
      "x": 0.665,
      "y": 0.7503,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2056,
      "id": "img-si",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-2.photo",
      "src": "/samples/omolade-adebisi.jpg",
      "width": 0.185,
      "x": 0.8475,
      "y": 0.6734,
    },
  ],
  "customSize": {
    "height": 1500,
    "width": 1500,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "bottom-left",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0.22,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.0612,
        "id": "shape-s2",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "label.chip",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.4431,
        "x": 0.2816,
        "y": 0.3811,
      },
    ],
    "showLogo": true,
    "texts": [
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Continuation Capital
& Venture Secondaries:",
        "font": "onest",
        "fontSize": 109,
        "id": "text-s0",
        "position": {
          "x": 0.06,
          "y": 0.1877,
        },
        "simpleRole": "headline",
        "weight": 600,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.95)",
        "content": "Financing the Next Phase of European Growth",
        "font": "onest",
        "fontSize": 54,
        "id": "text-s1",
        "position": {
          "x": 0.06,
          "y": 0.3085,
        },
        "simpleRole": "subtitle",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#15110E",
        "content": "PANEL DISCUSSION",
        "font": "onest",
        "fontSize": 54,
        "id": "text-s3",
        "letterSpacing": 1,
        "position": {
          "x": 0.09,
          "y": 0.385,
        },
        "simpleRole": "label",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "MODERATOR",
        "font": "onest",
        "fontSize": 29,
        "id": "text-s5",
        "letterSpacing": 1,
        "position": {
          "x": 0.08,
          "y": 0.8128,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Pierre Leroy",
        "font": "onest",
        "fontSize": 30,
        "id": "text-s6",
        "position": {
          "x": 0.39,
          "y": 0.4867,
        },
        "simpleRole": "moderator.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Managing Director & Co-Head of
Secondaries at Stifel",
        "font": "onest",
        "fontSize": 22,
        "id": "text-s7",
        "position": {
          "x": 0.39,
          "y": 0.5171,
        },
        "simpleRole": "moderator.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Andrei Xydas",
        "font": "onest",
        "fontSize": 27,
        "id": "text-s8",
        "position": {
          "x": 0.39,
          "y": 0.6845,
        },
        "simpleRole": "speaker-0.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Principal, Lightrock",
        "font": "onest",
        "fontSize": 19,
        "id": "text-s9",
        "position": {
          "x": 0.39,
          "y": 0.706,
        },
        "simpleRole": "speaker-0.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 23,
        "id": "text-sb",
        "letterSpacing": 1,
        "position": {
          "x": 0.41,
          "y": 0.9112,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Nicholas Sando",
        "font": "onest",
        "fontSize": 27,
        "id": "text-sc",
        "position": {
          "x": 0.5725,
          "y": 0.5946,
        },
        "simpleRole": "speaker-1.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Partner, Secondaries,
Molten",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sd",
        "position": {
          "x": 0.5725,
          "y": 0.6226,
        },
        "simpleRole": "speaker-1.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 23,
        "id": "text-sf",
        "letterSpacing": 1,
        "position": {
          "x": 0.5925,
          "y": 0.8344,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Omolade Adebisi",
        "font": "onest",
        "fontSize": 27,
        "id": "text-sg",
        "position": {
          "x": 0.755,
          "y": 0.5048,
        },
        "simpleRole": "speaker-2.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Principal & Head of
Secondaries, ISOMER
Capital",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sh",
        "position": {
          "x": 0.755,
          "y": 0.5392,
        },
        "simpleRole": "speaker-2.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 23,
        "id": "text-sj",
        "letterSpacing": 1,
        "position": {
          "x": 0.775,
          "y": 0.7575,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
    ],
  },
  "format": "square",
}
`;

exports[`Panel Maker — 3 speakers + 1 moderator > layout is stable for story 1`] = `
{
  "canvasImages": [
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2184,
      "id": "img-s4",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "moderator.photo",
      "src": "/samples/pierre-leroy.jpg",
      "width": 0.2773,
      "x": 0.1987,
      "y": 0.4637,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2184,
      "id": "img-s8",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-0.photo",
      "src": "/samples/andrei-xydas.jpg",
      "width": 0.2773,
      "x": 0.5,
      "y": 0.4637,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2184,
      "id": "img-sc",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-1.photo",
      "src": "/samples/nicholas-sando.jpg",
      "width": 0.2773,
      "x": 0.8013,
      "y": 0.4637,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2184,
      "id": "img-sg",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-2.photo",
      "src": "/samples/omolade-adebisi.jpg",
      "width": 0.2773,
      "x": 0.1987,
      "y": 0.7061,
    },
  ],
  "customSize": {
    "height": 1920,
    "width": 1080,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "bottom-left",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0.22,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.0344,
        "id": "shape-s2",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "label.chip",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.447,
        "x": 0.2835,
        "y": 0.2883,
      },
    ],
    "showLogo": true,
    "texts": [
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Continuation Capital
& Venture Secondaries:",
        "font": "onest",
        "fontSize": 79,
        "id": "text-s0",
        "position": {
          "x": 0.06,
          "y": 0.1559,
        },
        "simpleRole": "headline",
        "weight": 600,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.95)",
        "content": "Financing the Next Phase of European Growth",
        "font": "onest",
        "fontSize": 39,
        "id": "text-s1",
        "position": {
          "x": 0.06,
          "y": 0.2369,
        },
        "simpleRole": "subtitle",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#15110E",
        "content": "PANEL DISCUSSION",
        "font": "onest",
        "fontSize": 39,
        "id": "text-s3",
        "letterSpacing": 1,
        "position": {
          "x": 0.09,
          "y": 0.2905,
        },
        "simpleRole": "label",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "MODERATOR",
        "font": "onest",
        "fontSize": 14,
        "id": "text-s5",
        "letterSpacing": 1,
        "position": {
          "x": 0.076,
          "y": 0.5097,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Pierre Leroy",
        "font": "onest",
        "fontSize": 22,
        "id": "text-s6",
        "position": {
          "x": 0.076,
          "y": 0.5241,
        },
        "simpleRole": "moderator.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.88)",
        "content": "Managing Director & Co-Head of
Secondaries at Stifel",
        "font": "onest",
        "fontSize": 16,
        "id": "text-s7",
        "position": {
          "x": 0.076,
          "y": 0.5438,
        },
        "simpleRole": "moderator.secondary",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 14,
        "id": "text-s9",
        "letterSpacing": 1,
        "position": {
          "x": 0.3773,
          "y": 0.5178,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Andrei Xydas",
        "font": "onest",
        "fontSize": 22,
        "id": "text-sa",
        "position": {
          "x": 0.3773,
          "y": 0.5322,
        },
        "simpleRole": "speaker-0.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.88)",
        "content": "Principal, Lightrock",
        "font": "onest",
        "fontSize": 16,
        "id": "text-sb",
        "position": {
          "x": 0.3773,
          "y": 0.5478,
        },
        "simpleRole": "speaker-0.secondary",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 14,
        "id": "text-sd",
        "letterSpacing": 1,
        "position": {
          "x": 0.6787,
          "y": 0.5178,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Nicholas Sando",
        "font": "onest",
        "fontSize": 22,
        "id": "text-se",
        "position": {
          "x": 0.6787,
          "y": 0.5322,
        },
        "simpleRole": "speaker-1.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.88)",
        "content": "Partner, Secondaries, Molten",
        "font": "onest",
        "fontSize": 16,
        "id": "text-sf",
        "position": {
          "x": 0.6787,
          "y": 0.5478,
        },
        "simpleRole": "speaker-1.secondary",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 14,
        "id": "text-sh",
        "letterSpacing": 1,
        "position": {
          "x": 0.076,
          "y": 0.7521,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Omolade Adebisi",
        "font": "onest",
        "fontSize": 22,
        "id": "text-si",
        "position": {
          "x": 0.076,
          "y": 0.7665,
        },
        "simpleRole": "speaker-2.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.88)",
        "content": "Principal & Head of
Secondaries, ISOMER Capital",
        "font": "onest",
        "fontSize": 16,
        "id": "text-sj",
        "position": {
          "x": 0.076,
          "y": 0.7862,
        },
        "simpleRole": "speaker-2.secondary",
        "weight": 400,
      },
    ],
  },
  "format": "story",
}
`;

exports[`Sales Maker — layout > countdown layout is stable for presentation 1`] = `
{
  "canvasImages": [],
  "customSize": {
    "height": 1080,
    "width": 1920,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "top-right",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.078,
        "id": "shape-s0",
        "opacity": 1,
        "rotation": 45,
        "simpleRole": "ribbon.band",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.4299,
        "x": 0.9156,
        "y": 0.15,
      },
      {
        "blur": 0,
        "borderRadius": 0.06,
        "color1": "#FF6B00",
        "color2": "#FF0028",
        "colorType": "gradient",
        "fillType": "outline",
        "height": 0.26,
        "id": "shape-s2",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "sales-countdown.photo",
        "strokeWidth": 0.0013,
        "type": "rectangle",
        "width": 0.88,
        "x": 0.5,
        "y": 0.81,
      },
    ],
    "showLogo": false,
    "texts": [
      {
        "align": "center",
        "color": "#15110E",
        "content": "TECHBBQ · TECHBBQ · TECHBBQ",
        "font": "onest",
        "fontSize": 24,
        "id": "text-s1",
        "letterSpacing": 1,
        "position": {
          "x": 0.9156,
          "y": 0.15,
        },
        "rotation": 45,
        "simpleRole": "sales.ribbon",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "48",
        "font": "onest",
        "fontSize": 436,
        "id": "text-s3",
        "position": {
          "x": 0.06,
          "y": 0.2417,
        },
        "simpleRole": "sales.value",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "days left",
        "font": "onest",
        "fontSize": 259,
        "id": "text-s4",
        "position": {
          "x": 0.06,
          "y": 0.5285,
        },
        "simpleRole": "sales.caption",
        "weight": 500,
      },
    ],
  },
  "format": "presentation",
}
`;

exports[`Sales Maker — layout > countdown layout is stable for square 1`] = `
{
  "canvasImages": [],
  "customSize": {
    "height": 1500,
    "width": 1500,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "top-right",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.078,
        "id": "shape-s0",
        "opacity": 1,
        "rotation": 45,
        "simpleRole": "ribbon.band",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.7643,
        "x": 0.85,
        "y": 0.15,
      },
      {
        "blur": 0,
        "borderRadius": 0.06,
        "color1": "#FF6B00",
        "color2": "#FF0028",
        "colorType": "gradient",
        "fillType": "outline",
        "height": 0.26,
        "id": "shape-s2",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "sales-countdown.photo",
        "strokeWidth": 0.0013,
        "type": "rectangle",
        "width": 0.88,
        "x": 0.5,
        "y": 0.81,
      },
    ],
    "showLogo": false,
    "texts": [
      {
        "align": "center",
        "color": "#15110E",
        "content": "TECHBBQ · TECHBBQ · TECHBBQ",
        "font": "onest",
        "fontSize": 34,
        "id": "text-s1",
        "letterSpacing": 1,
        "position": {
          "x": 0.85,
          "y": 0.15,
        },
        "rotation": 45,
        "simpleRole": "sales.ribbon",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "48",
        "font": "onest",
        "fontSize": 630,
        "id": "text-s3",
        "position": {
          "x": 0.06,
          "y": 0.25,
        },
        "simpleRole": "sales.value",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "days left",
        "font": "onest",
        "fontSize": 208,
        "id": "text-s4",
        "position": {
          "x": 0.06,
          "y": 0.4944,
        },
        "simpleRole": "sales.caption",
        "weight": 500,
      },
    ],
  },
  "format": "square",
}
`;

exports[`Sales Maker — layout > countdown layout is stable for story 1`] = `
{
  "canvasImages": [],
  "customSize": {
    "height": 1920,
    "width": 1080,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "top-right",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.0439,
        "id": "shape-s0",
        "opacity": 1,
        "rotation": 45,
        "simpleRole": "ribbon.band",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.7643,
        "x": 0.85,
        "y": 0.0844,
      },
      {
        "blur": 0,
        "borderRadius": 0.06,
        "color1": "#FF6B00",
        "color2": "#FF0028",
        "colorType": "gradient",
        "fillType": "outline",
        "height": 0.1463,
        "id": "shape-s2",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "sales-countdown.photo",
        "strokeWidth": 0.0013,
        "type": "rectangle",
        "width": 0.88,
        "x": 0.5,
        "y": 0.8669,
      },
    ],
    "showLogo": false,
    "texts": [
      {
        "align": "center",
        "color": "#15110E",
        "content": "TECHBBQ · TECHBBQ · TECHBBQ",
        "font": "onest",
        "fontSize": 24,
        "id": "text-s1",
        "letterSpacing": 1,
        "position": {
          "x": 0.85,
          "y": 0.0844,
        },
        "rotation": 45,
        "simpleRole": "sales.ribbon",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "48",
        "font": "onest",
        "fontSize": 454,
        "id": "text-s3",
        "position": {
          "x": 0.06,
          "y": 0.1581,
        },
        "simpleRole": "sales.value",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "days left",
        "font": "onest",
        "fontSize": 150,
        "id": "text-s4",
        "position": {
          "x": 0.06,
          "y": 0.2956,
        },
        "simpleRole": "sales.caption",
        "weight": 500,
      },
    ],
  },
  "format": "story",
}
`;

exports[`Sales Maker — layout > discount layout is stable for presentation 1`] = `
{
  "canvasImages": [],
  "customSize": {
    "height": 1080,
    "width": 1920,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "top-right",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.078,
        "id": "shape-s0",
        "opacity": 1,
        "rotation": 45,
        "simpleRole": "ribbon.band",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.4299,
        "x": 0.9156,
        "y": 0.15,
      },
      {
        "blur": 0,
        "borderRadius": 0.1,
        "color1": "#FF6B00",
        "color2": "#FF0028",
        "colorType": "gradient",
        "fillType": "outline",
        "height": 0.56,
        "id": "shape-s2",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "sales-discount.photo",
        "strokeWidth": 0.0013,
        "type": "rectangle",
        "width": 0.1519,
        "x": 0.8641,
        "y": 0.66,
      },
      {
        "blur": 0,
        "borderRadius": 0.5,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.088,
        "id": "shape-s5",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "cta.pill",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.1548,
        "x": 0.1374,
        "y": 0.84,
      },
    ],
    "showLogo": false,
    "texts": [
      {
        "align": "center",
        "color": "#15110E",
        "content": "TECHBBQ · TECHBBQ · TECHBBQ",
        "font": "onest",
        "fontSize": 24,
        "id": "text-s1",
        "letterSpacing": 1,
        "position": {
          "x": 0.9156,
          "y": 0.15,
        },
        "rotation": 45,
        "simpleRole": "sales.ribbon",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Less than 2 weeks
left to save",
        "font": "onest",
        "fontSize": 89,
        "id": "text-s3",
        "position": {
          "x": 0.06,
          "y": 0.182,
        },
        "simpleRole": "sales.headline",
        "weight": 600,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "10%",
        "font": "onest",
        "fontSize": 367,
        "id": "text-s4",
        "position": {
          "x": 0.06,
          "y": 0.525,
        },
        "simpleRole": "sales.value",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#C4161C",
        "content": "BOOK NOW",
        "font": "onest",
        "fontSize": 35,
        "id": "text-s6",
        "letterSpacing": 1,
        "position": {
          "x": 0.0909,
          "y": 0.8435,
        },
        "simpleRole": "sales.cta",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.92)",
        "content": "COPENHAGEN  |  26-27 AUGUST 2026",
        "font": "onest",
        "fontSize": 28,
        "id": "text-s7",
        "letterSpacing": 1,
        "position": {
          "x": 0.06,
          "y": 0.927,
        },
        "simpleRole": "sales.footer",
        "uppercase": true,
        "weight": 600,
      },
    ],
  },
  "format": "presentation",
}
`;

exports[`Sales Maker — layout > discount layout is stable for square 1`] = `
{
  "canvasImages": [],
  "customSize": {
    "height": 1500,
    "width": 1500,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "top-right",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.078,
        "id": "shape-s0",
        "opacity": 1,
        "rotation": 45,
        "simpleRole": "ribbon.band",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.7643,
        "x": 0.85,
        "y": 0.15,
      },
      {
        "blur": 0,
        "borderRadius": 0.1,
        "color1": "#FF6B00",
        "color2": "#FF0028",
        "colorType": "gradient",
        "fillType": "outline",
        "height": 0.56,
        "id": "shape-s2",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "sales-discount.photo",
        "strokeWidth": 0.0013,
        "type": "rectangle",
        "width": 0.27,
        "x": 0.805,
        "y": 0.66,
      },
      {
        "blur": 0,
        "borderRadius": 0.5,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.088,
        "id": "shape-s5",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "cta.pill",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.2781,
        "x": 0.199,
        "y": 0.84,
      },
    ],
    "showLogo": false,
    "texts": [
      {
        "align": "center",
        "color": "#15110E",
        "content": "TECHBBQ · TECHBBQ · TECHBBQ",
        "font": "onest",
        "fontSize": 34,
        "id": "text-s1",
        "letterSpacing": 1,
        "position": {
          "x": 0.85,
          "y": 0.15,
        },
        "rotation": 45,
        "simpleRole": "sales.ribbon",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Less than 2 weeks
left to save",
        "font": "onest",
        "fontSize": 110,
        "id": "text-s3",
        "position": {
          "x": 0.06,
          "y": 0.1735,
        },
        "simpleRole": "sales.headline",
        "weight": 600,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "10%",
        "font": "onest",
        "fontSize": 419,
        "id": "text-s4",
        "position": {
          "x": 0.06,
          "y": 0.5165,
        },
        "simpleRole": "sales.value",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#C4161C",
        "content": "BOOK NOW",
        "font": "onest",
        "fontSize": 48,
        "id": "text-s6",
        "letterSpacing": 2,
        "position": {
          "x": 0.115,
          "y": 0.8435,
        },
        "simpleRole": "sales.cta",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.92)",
        "content": "COPENHAGEN  |  26-27 AUGUST 2026",
        "font": "onest",
        "fontSize": 39,
        "id": "text-s7",
        "letterSpacing": 1,
        "position": {
          "x": 0.06,
          "y": 0.927,
        },
        "simpleRole": "sales.footer",
        "uppercase": true,
        "weight": 600,
      },
    ],
  },
  "format": "square",
}
`;

exports[`Sales Maker — layout > discount layout is stable for story 1`] = `
{
  "canvasImages": [],
  "customSize": {
    "height": 1920,
    "width": 1080,
  },
  "design": {
    "backgroundId": "orb7",
    "logoPosition": "top-right",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.0439,
        "id": "shape-s0",
        "opacity": 1,
        "rotation": 45,
        "simpleRole": "ribbon.band",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.7643,
        "x": 0.85,
        "y": 0.0844,
      },
      {
        "blur": 0,
        "borderRadius": 0.1,
        "color1": "#FF6B00",
        "color2": "#FF0028",
        "colorType": "gradient",
        "fillType": "outline",
        "height": 0.315,
        "id": "shape-s2",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "sales-discount.photo",
        "strokeWidth": 0.0013,
        "type": "rectangle",
        "width": 0.27,
        "x": 0.805,
        "y": 0.7825,
      },
      {
        "blur": 0,
        "borderRadius": 0.5,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.0495,
        "id": "shape-s5",
        "opacity": 1,
        "rotation": 0,
        "simpleRole": "cta.pill",
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.2752,
        "x": 0.1976,
        "y": 0.8706,
      },
    ],
    "showLogo": false,
    "texts": [
      {
        "align": "center",
        "color": "#15110E",
        "content": "TECHBBQ · TECHBBQ · TECHBBQ",
        "font": "onest",
        "fontSize": 24,
        "id": "text-s1",
        "letterSpacing": 1,
        "position": {
          "x": 0.85,
          "y": 0.0844,
        },
        "rotation": 45,
        "simpleRole": "sales.ribbon",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Less than 2 weeks
left to save",
        "font": "onest",
        "fontSize": 79,
        "id": "text-s3",
        "position": {
          "x": 0.06,
          "y": 0.1414,
        },
        "simpleRole": "sales.headline",
        "weight": 600,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "10%",
        "font": "onest",
        "fontSize": 302,
        "id": "text-s4",
        "position": {
          "x": 0.06,
          "y": 0.5093,
        },
        "simpleRole": "sales.value",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#C4161C",
        "content": "BOOK NOW",
        "font": "onest",
        "fontSize": 35,
        "id": "text-s6",
        "letterSpacing": 1,
        "position": {
          "x": 0.115,
          "y": 0.8726,
        },
        "simpleRole": "sales.cta",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.92)",
        "content": "COPENHAGEN  |  26-27 AUGUST 2026",
        "font": "onest",
        "fontSize": 28,
        "id": "text-s7",
        "letterSpacing": 1,
        "position": {
          "x": 0.06,
          "y": 0.9327,
        },
        "simpleRole": "sales.footer",
        "uppercase": true,
        "weight": 600,
      },
    ],
  },
  "format": "story",
}
`;
